// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={1000}
      createdAt={0}
      description="This"
      id="1"
      key="1"
      note="This mistake extracts a heavy toll"
    />
    <ExpenseListItem
      amount={50}
      createdAt={-345600000}
      description="Mistake"
      id="2"
      key="2"
      note="This mistake extracts a heavy toll"
    />
    <ExpenseListItem
      amount={500}
      createdAt={345600000}
      description="Extracts"
      id="3"
      key="3"
      note="This mistake extracts a heavy toll"
    />
  </div>
</div>
`;

exports[`Should render ExpenseList without expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item__message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;
